fix for login/register on mobile

--- a/static/css/static.css
+++ b/static/css/static.css
@@ -481,7 +481,7 @@ p.tagline {
 .registrationContent {
   text-align: center;
   margin: 1% auto 0;
-  width: 25%;
+  width: 320px;
 }
 
 .registrationContent h1 span.en{
